Initial setup of the project

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.py[cod]
+*.sw[po]
+*.log
 
 # C extensions
 *.so
@@ -34,3 +36,10 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+# Complexity
+output/*.html
+output/*/index.html
+
+# Sphinx
+docs/_build
